fixing BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
+html {
+  display: table;
+  background-color: rgb(57, 57, 57);
+}
+
 body {
+  height: 100%;
   background-color: rgb(240,240,240);
   font-family: "Slabo 27px", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
